<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="funput_ui_back">Quay lại</string>
</resources>
